--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~47.0.12",
+    "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
