--- a/Zomato-Clone-Back-End/package.json
+++ b/Zomato-Clone-Back-End/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
