--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.5",
     "expo": "~47.0.12",
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
@@ -19,10 +21,13 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0"
+    "react-native-screens": "^3.19.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "react-native-dotenv": "^3.4.7",
     "tailwindcss": "^3.2.4"
   },
   "private": true
