--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -19,6 +19,7 @@
     "expo": "~47.0.12",
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -27,7 +28,8 @@
     "react-native-screens": "^3.19.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
