--- a/Zomato-Clone-Back-End/package.json
+++ b/Zomato-Clone-Back-End/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "stripe": "^11.8.0"
   }
 }
