--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/stripe-react-native": "^0.23.1",
     "axios": "^1.2.5",
     "expo": "~47.0.12",
     "expo-font": "^11.0.1",
