--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.2.5",
     "expo": "~47.0.12",
     "expo-font": "^11.0.1",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-web": "~0.18.9",
