--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -22,6 +22,7 @@
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
