--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.3",
@@ -18,7 +19,7 @@
     "@stripe/stripe-react-native": "^0.23.1",
     "axios": "^1.2.5",
     "expo": "~47.0.12",
-    "expo-font": "^11.0.1",
+    "expo-font": "~11.0.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
