--- a/Zomato-Front-End/package.json
+++ b/Zomato-Front-End/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-maps": "1.3.2",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-web": "~0.18.9",
